Started the header/bio area and colored the background and modified the fonts.

--- a/index.html
+++ b/index.html
@@ -3,9 +3,26 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="stylesheet/style.css">
   <title>My Landing Page</title>
 </head>
 <body>
-  
+  <!-- Header and links-->
+  <header class="dark-background">
+    <nav>
+      <div class="header-bio">
+        <span class="header-logo">Header Logo</span>
+      </div>
+      <div class="header-links">
+        <a>About</a> 
+        <a>Works</a>
+        <a>Source</a>
+      </div>
+    </nav>
+    <div class="intro-div">
+      <h1 class="intro-bold">Hello there! My name is Isaac</h1>
+      <p class="intro-reg">I am an aspiring programmer and powerlifter. Thanks for coming to my website!</p>
+    </div>
+  </header>
 </body>
 </html>
