Finished the intro and header area. Added the background for quote area and organized the css better.

--- a/index.html
+++ b/index.html
@@ -14,15 +14,21 @@
         <span class="header-logo">Header Logo</span>
       </div>
       <div class="header-links">
-        <a>About</a> 
-        <a>Works</a>
-        <a>Source</a>
+        <a>Link One</a> 
+        <a>Link Two</a>
+        <a>Link Three</a>
       </div>
     </nav>
+  <div class="intro-main">
     <div class="intro-div">
-      <h1 class="intro-bold">Hello there! My name is Isaac</h1>
-      <p class="intro-reg">I am an aspiring programmer and powerlifter. Thanks for coming to my website!</p>
+      <h1 class="intro-bold">This website is awesome!</h1>
+      <p class="intro-reg">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
+      <button class="signUp">Sign Up</button>
     </div>
+    <div>
+    </div>
+      <img class="intro-img" src="https://cdn.pixabay.com/photo/2016/03/12/23/18/man-1253004_960_720.jpg">
+  </div>
   </header>
 </body>
 </html>
