finished the page. Attemppting to link to source with javascript in the srouce button.

--- a/index.html
+++ b/index.html
@@ -30,5 +30,49 @@
       <img class="intro-img" src="https://cdn.pixabay.com/photo/2016/03/12/23/18/man-1253004_960_720.jpg">
   </div>
   </header>
+  <div class="random">
+    <div class="randomheader"><span>Some random information.</span></div>
+    <div class="randompictures">
+      <div class="randomimg">
+        <img src="https://images.unsplash.com/photo-1556888335-23631cd2801a?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1453&q=80">
+        <p>This is some subtext under an illustration or image.</p>
+      </div>
+      <div class="randomimg">
+        <img src="https://images.unsplash.com/photo-1556888335-23631cd2801a?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1453&q=80">
+        <p>This is some subtext under an illustration or image.</p>
+      </div>
+      <div class="randomimg">
+        <img src="https://images.unsplash.com/photo-1556888335-23631cd2801a?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1453&q=80">
+        <p>This is some subtext under an illustration or image.</p>
+      </div>
+      <div class="randomimg">
+        <img src="https://images.unsplash.com/photo-1556888335-23631cd2801a?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1453&q=80">
+        <p>This is some subtext under an illustration or image.</p>
+      </div>
+    </div>
+  </div>
+  <div class="quotearea quote-background">
+    <div>
+      <p class="quote">
+      "No man has the right to be an amateur in the matter of physical training. It is a shame for a man to grow old without seeing the beauty and strength of which his body is capable."
+      </p>
+      <span>Socrates</span>
+    </div>
+  </div>
+  <div class="signuparea">
+    <div>
+      <div class="signupinside">
+        <strong>Call to action! It is time!</strong>
+        <p>Signup for source code by clicking the button!</p>
+      </div>
+      <div>
+        <button class="sourcebutton" id="source" onclick="mySource()">Source</button>
+      </div>
+    </div>
+  </div>
+  <footer class="dark-background">
+    <span class="intro-reg">Copyright @ The Odin Project 2021</span>
+  </footer>
 </body>
+<script src="js/script.js"></script>
 </html>
