finished the landing page. add a button for source code at the bottom in js.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <span class="header-logo">Header Logo</span>
       </div>
       <div class="header-links">
-        <a>Link One</a> 
+        <a>Link One</a>
         <a>Link Two</a>
         <a>Link Three</a>
       </div>
@@ -66,7 +66,7 @@
         <p>Signup for source code by clicking the button!</p>
       </div>
       <div>
-        <button class="sourcebutton" id="source" onclick="mySource()">Source</button>
+        <button type="button" class="sourcebutton" id="source">Source</button>
       </div>
     </div>
   </div>
